--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "node-sass": "^9.0.0",
     "npm-run-all2": "^6.0.6",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.2",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.11"
