--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass-loader": "^13.3.2",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
+    "vitest": "^0.34.6",
     "vue-tsc": "^1.8.11"
   }
 }
