--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.17.17",
-    "@vitejs/plugin-vue": "^4.3.4",
+    "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.0-alpha.2",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "happy-dom": "^12.9.1",
     "node-sass": "^9.0.0",
     "npm-run-all2": "^6.0.6",
     "sass": "^1.68.0",
